--- a/03_validarDados.html
+++ b/03_validarDados.html
@@ -11,14 +11,34 @@
     */
 
     //Entrada
-    let name = prompt(`Insira seu nome.`.trim());
+    let nome = prompt(`Insira seu nome.`.trim());
     let id = Number(prompt(`Insira sua idade.`.trim()));
-    let salario = Number((`Insira seu salário.`.trim()));
+    let salario = Number(prompt(`Insira seu salário.`.trim()));
     let sex = prompt(`Insira seu sexo ("F" para feminino e "M" para masculino)`.trim().toUpperCase());
     let civil = prompt(`Insira seu estado civil ("S" para solteiro, "C" para casado, "V" para viúvo e "D" para divorciado)`.trim().toUpperCase());
-     while (name.lenght < 3 || idade > 0 || salario > 0 || sex != "M" && sex != "F" || civil != "S" && civil != "C" && civil != "V" && civil != "D") {
-        
-     }
+    while (nome.length < 3 || idade < 0 || idade > 150 || salario < 0 || (sex !== "M" && sex !== "F") || (civil !== "S" && civil !== "C" && civil !== "V" && civil !== "D")) {
+
+        if (nome.length < 3) {
+            nome = prompt(`Requesito não atendido, insira seu nome novamente.`);
+        }
+        if (id < 0 || id > 150) {
+            id = Number((`Requesito não atendido, insira sua idade novamente.`));
+        }
+        if (salario < 0) {
+            salario = Number((`Requesito não atendido, insira seu salário novamente.`));
+        }
+
+        if (sex !== "M" && sex !== "F") {
+            sex = prompt(`Requesito não atendido, insira seu sexo novamente.`);
+        }
+        if (civil !== "S" && civil !== "C" && civil !== "V" && civil !== "D") {
+            civil = prompt(`Requesito não atendido, insira seu estado civil novamente.`);
+        }
+
+        alert(`Informações válidas, tenha um bom-dia`)
+
+
+    }
 
     //Processamento
 
